Updated so only two images can be visible at the same time, preventing text selection and improved opacity CSS fix

--- a/css/memo.css
+++ b/css/memo.css
@@ -1,6 +1,8 @@
 body {
 	font-size: 10px;
 	padding: 10px;
+	-webkit-user-select: ignore;
+	-khtml-user-select: none;
 }
 
 #header {
@@ -56,11 +58,12 @@ h1 {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: url(../images/transparency.png);
+	background: #ccc;
+	opacity: 0.8;
 	z-index: 2;
 	display: none;
 }
-#you-made-it .dialog{
+#you-made-it-dialog{
 	position: absolute;
 	left: 50%;
 	top: 200px;
@@ -71,6 +74,8 @@ h1 {
 	border: 1px solid #000;
 	margin-left: -80px;
 	padding: 10px;
+	z-index: 2;
+	display: none;
 }
 
 #start-over-container{
